# libmem

./: configure.ac
src/: Makefile.am  mem.c  mem.h
tests/: Makefile.am  test_alloc_free.c
